fixed alignment issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@ body {
 #front-container {
   display: flex;
   width: 100vw;
+  column-gap: 30px;
 }
 
 #sidebar {
@@ -415,4 +416,68 @@ body {
 
 button-items {
   display: flex;
+}
+
+/* Middle Container */
+
+#middle-container {
+  width: 970px;
+}
+
+#hero-section {
+  background-image: url(../images/hero-bg.png);
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 467px;
+  display: flex;
+  align-items: center;
+}
+
+#hero-description {
+  width: 50%;
+  margin-left: 60px;
+}
+
+#hero-description h1 {
+  font-size: 48px;
+  color: #2b2b2b;
+  margin-bottom: 18px;
+  font-weight: bold;
+}
+
+#hero-description button {
+  width: 154px;
+  height: 51px;
+  background-color: #ffb400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 9px;
+  padding: 19px 32px;
+  border-radius: 5px;
+}
+
+#hero-description img {
+  height: 16px;
+  width: 16px;
+}
+
+#hero-description span {
+  color: #ffb400;
+}
+
+#hero-description p {
+  color: #767676;
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+
+#hero-img {
+  height: 459px;
+  width: 325px;
+  background-image: url(../images/hero-pic.png);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
